--- a/.gitignore
+++ b/.gitignore
@@ -243,3 +243,6 @@ ModelManifest.xml
 
 # FAKE - F# Make
 .fake/
+MindNote/肖鸢_3150102459.zip
+MindNote/肖鸢_3150102459/code/button.cpp
+MindNote/肖鸢_3150102459/code/mindnote.ui
